--- a/Spotlight-library/src/main/res/animator/arc_animator.xml
+++ b/Spotlight-library/src/main/res/animator/arc_animator.xml
@@ -4,27 +4,21 @@
     android:ordering="together">
 
     <objectAnimator
-        android:duration="0"
-        android:propertyName="trimPathEnd"
-        android:valueFrom="0"
-        android:valueTo="0" />
-
-    <!--<objectAnimator-->
-    <!--android:duration="0"-->
-    <!--android:propertyName="strokeAlpha"-->
-    <!--android:valueFrom="1"-->
-    <!--android:valueTo="1" />-->
-
-    <objectAnimator
         android:duration="300"
         android:propertyName="trimPathEnd"
         android:valueFrom="0"
         android:valueTo="1" />
 
-    <!--<objectAnimator-->
-    <!--android:duration="300"-->
-    <!--android:propertyName="strokeAlpha"-->
-    <!--android:valueFrom="0.4"-->
-    <!--android:valueTo="1" />-->
+    <objectAnimator
+        android:duration="200"
+        android:propertyName="strokeAlpha"
+        android:valueFrom="0"
+        android:valueTo="1" />
+
+    <objectAnimator
+        android:duration="150"
+        android:propertyName="strokeWidth"
+        android:valueFrom="0"
+        android:valueTo="4" />
 
 </set>
